Added a useful resource
Have added a useful resource about the use of yield keyword and python generators from the scaler topics in the reference section.

--- a/_posts/2020-03-05-yield.md
+++ b/_posts/2020-03-05-yield.md
@@ -97,6 +97,7 @@ Feel free to drop a note in the comment bellow. See you next time :)
 
 - [Python docs](https://docs.python.org/2.4/ref/yield.html)
 
+- [Scaler Topics, Python Generators](https://www.scaler.com/topics/python/python-generators/)
 
 
 <style type="text/css">
